--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" np-app>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,9 @@
     {% block javascripts %}
         {% javascripts '@MainAdminBundle/Resources/public/js/jquery-2.1.1.min.js'
                        '@MainAdminBundle/Resources/public/js/bootstrap.min.js'
-                       '@MainAdminBundle/Resources/public/js/docs.min.js'
+                       '@MainAdminBundle/Resources/public/js/angular.js'
+                       '@MainAdminBundle/Resources/public/js/angular-route.js'
+        output="libs.js"
         %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
@@ -23,11 +25,6 @@
         <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
     {% endblock %}
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
