--- a/src/Main/AdminBundle/Resources/views/Dashboard/show.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Dashboard/show.html.twig
@@ -1,4 +1,12 @@
 {% extends "MainAdminBundle::layout.html.twig" %}
+{% block javascripts %}
+    {{ parent() }}
+    {% javascripts '@MainAdminBundle/Resources/views/Dashboard/public/js/dashboard.js'
+    output="lib"
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
 {% block body %}
 <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
@@ -11,6 +19,11 @@
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
         <h1 class="page-header">Dashboard {{ status }}</h1>
+        <div>
+            <label>Name:</label>
+            <input type="text" ng-model="yourName" placeholder="Enter a name here">
+            <h1>Hello {[{yourName}]}!</h1>
+        </div>
     </div>
 </div>
 {% endblock %}
