--- a/src/Main/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Main/UserBundle/Resources/views/Users/list.html.twig
@@ -1,9 +1,34 @@
 {% extends "MainAdminBundle::layout.html.twig" %}
-    {% block stylesheets %}
+    {% block javascripts %}
         {{ parent() }}
+        {% javascripts '@MainAdminBundle/Resources/public/vendor/ng-table/ng-table.min.js'
+        '@MainUserBundle/Resources/views/Users/public/list.js'
+        output="lib"
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
     {% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets '@MainAdminBundle/Resources/public/vendor/ng-table/ng-table.min.css'
+    output="lib"
+    %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+{% endblock %}
 {% block body %}
+    <div ng-controller="ListCtrl">
+        <p><strong>Page:</strong>{{ '{{tableParams.page()}}' }}</p>
+        <p><strong>Count per page:</strong>{{ ' {{tableParams.count()}} '}}</p>
+        <p><strong>Count per page:</strong>{{ ' {{tableParams.total()}} '}}</p>
 
-
-
+        <table ng-table="tableParams" class="table table-condensed">
+            <tr ng-repeat="user in $data">
+                <td data-title="'Id'" sortable="'id'">{{ '{{user.id}} '}}</td>
+                <td data-title="'Name'" sortable="'name'">{{ '{{user.name}} '}}</td>
+                <td data-title="'Email'" sortable="'email'">{{ '{{user.email}} '}}</td>
+                <td data-title="'Last Login'" sortable="'last_login'">{{ '{{user.last_login}} '}}</td>
+            </tr>
+        </table>
+    </div>
 {% endblock %}
