--- a/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
+++ b/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
@@ -8,9 +8,16 @@
     {% endjavascripts %}
 {% endblock %}
 {% block body %}
-
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
-    <h1 class="page-header">Dashboard</h1>
+<div class="row">
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+        <h1 class="page-header">Profile</h1>
+    </div>
 </div>
+<div class="row">
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+        {{ status }}
+    </div>
+</div>
+
 
 {% endblock %}
