--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -60,6 +60,8 @@
     {% block body %}{% endblock %}
 </div>
 
+{{ clank_client() }}
+<script src="{{ asset('js/websocket.js') }}" type="text/javascript"></script>
 </body>
 </html>
 
