--- a/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
+++ b/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
@@ -10,6 +10,7 @@
     {{ parent() }}
     {% javascripts 'assets/vendor/angular-xeditable/dist/js/xeditable.js'
                    '@MainAdminBundle/Resources/views/UserProfile/public/js/UserProfile.js'
+                   '@MainAdminBundle/Resources/views/Dashboard/public/js/DashboardWidget.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
