--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -33,6 +33,7 @@
         %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
+        <script src="{{ asset('http://autobahn.s3.amazonaws.com/js/autobahn.min.js') }}" type="text/javascript"></script>
     {% endblock %}
 </head>
 <body>
