--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -18,23 +18,7 @@
         <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
     {% endblock %}
-    {% block javascripts %}
-        {% javascripts 'assets/vendor/jquery/jquery.min.js'
-                       '@MainAdminBundle/Resources/public/js/pace.min.js'
-                       'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
-                       'assets/vendor/angular/angular.min.js'
-                       'assets/vendor/angular-route/angular-route.min.js'
-                       'assets/vendor/angular-animate/angular-animate.min.js'
-                       '@MainAdminBundle/Resources/public/js/main.js'
-                       'assets/vendor/remarkable-bootstrap-growl/bootstrap-growl.js'
-                       'assets/vendor/angular-strap/dist/angular-strap.js'
-                       'assets/vendor/angular-strap/dist/angular-strap.tpl.js'
-        filter='yui_js'
-        %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-        {% endjavascripts %}
-        <script src="{{ asset('http://autobahn.s3.amazonaws.com/js/autobahn.min.js') }}" type="text/javascript"></script>
-    {% endblock %}
+
 </head>
 <body>
 <div id="baseUrl" data-url="{{ app.request.getBaseURL() }}"></div>
@@ -53,7 +37,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ path('get_users') }}">Users</a></li>
-                {#<li><a href="#">Settings</a></li>#}
+                <li><a href="{{ path('get_widgets') }}">Widgets</a></li>
                 <li><a href="{{ path('show_userProfile', {'id': app.security.getToken().getUser().getId() }) }}">Profile</a></li>
                 <li><a href="{{ path('fos_user_security_logout') }}"><b>{{ app.user.username }}</b> Wyloguj</a></li>
             </ul>
@@ -64,7 +48,27 @@
 <div class="container-fluid">
     {% block body %}{% endblock %}
 </div>
-
+{% block javascripts %}
+    {% javascripts 'assets/vendor/jquery/dist/jquery.min.js'
+    'assets/vendor/pace/pace.min.js'
+    'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
+    'assets/vendor/angular/angular.min.js'
+    'assets/vendor/angular-route/angular-route.min.js'
+    'assets/vendor/angular-animate/angular-animate.min.js'
+    '@MainAdminBundle/Resources/public/js/main.js'
+    'assets/vendor/remarkable-bootstrap-growl/bootstrap-growl.js'
+    'assets/vendor/angular-strap/dist/angular-strap.js'
+    'assets/vendor/angular-strap/dist/angular-strap.tpl.js'
+    filter='yui_js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    <script>
+        angular.module('configuration', [])
+                .constant('BASE_END_POINT', '{{ app.request.baseUrl }}')
+                .constant('COMMON_API_END_POINT', '{{ app.request.getSchemeAndHttpHost() }}');
+    </script>
+{% endblock %}
 
 
 </body>
