--- a/src/Main/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Main/UserBundle/Resources/views/Users/list.html.twig
@@ -1,14 +1,8 @@
 {% extends "MainAdminBundle::layout.html.twig" %}
-{% block stylesheets %}
-    {{ parent() }}
-    {% stylesheets 'assets/vendor/ng-table/ng-table.min.css'
-    %}
-    <link rel="stylesheet" href="{{ asset_url }}" filter='yui_css' />
-    {% endstylesheets %}
-{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
-    {% javascripts 'assets/vendor/ng-table/ng-table.min.js'
+    {% javascripts
     '@MainUserBundle/Resources/views/Users/public/list.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
