--- a/src/Main/AdminBundle/Resources/views/Dashboard/show.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Dashboard/show.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
 
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+<div class="col-sm-12 col-md-12">
     <h1 class="page-header">Dashboard</h1>
 </div>
 
