--- a/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
+++ b/src/Main/AdminBundle/Resources/views/UserProfile/index.html.twig
@@ -12,12 +12,12 @@
 {% block body %}
 <div class="row">
     <div id="profile" data-profile="{{ app.request.get('id') }}"></div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+    <div class="col-sm-12 col-md-12">
         <h1 class="page-header">Profile</h1>
     </div>
 </div>
     <div class="row ng-cloak">
-        <div class="col-md-6 col-md-offset-2">
+        <div class="col-md-6">
             <div ng-controller="UserProfileCtrl">
                 <form editable-form name="editableForm" onaftersave="saveUser()">
                     <div class="buttons">
