--- a/src/Main/AdminBundle/Resources/views/Widgets/index.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/index.html.twig
@@ -13,16 +13,19 @@
 
 <div class="row">
     <div id="profile" data-profile="{{ app.request.get('id') }}"></div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+    <div class="col-sm-12 col-md-12">
         <h1 class="page-header">Widgets</h1> <a href="{{ path('new_widget') }}" class="btn btn-success">Utwórz nowy widget</a>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-10 col-md-offset-2">
+    <div class="col-sm-12 col-md-12">
         <div ng-controller="WidgetsCtrl">
             <table ng-table="tableParams" class="table table-condensed">
                 <tr ng-repeat="widget in $data">
                     <td data-title="'Id'" sortable="'id'">{{ '{{widget.id}}' }}</td>
+                    <td data-title="'Title'" sortable="'title'">{{ '{{widget.title}}' }}</td>
+                    <td data-title="'Type'" sortable="'type'">{{ '{{widget.type}}' }}</td>
+                    <td data-title="'Template'" sortable="'template'">{{ '{{widget.template}}' }}</td>
                     <td data-title="'Actions'">
                         <button type="button"
                                 class="btn btn-xs btn-danger"
