--- a/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
@@ -10,18 +10,62 @@
     {% endjavascripts %}
 {% endblock %}
 {% block body %}
-
     <div class="row">
         <div id="profile" data-profile="{{ app.request.get('id') }}"></div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+        <div class="col-sm-12 col-md-12">
             <h1 class="page-header">New widget</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10 col-md-offset-2">
+        <div class="col-sm-7 col-md-7">
             <div ng-controller="NewWidgetCtrl">
-                <nvd3 options='options' data='data'></nvd3>
+                <form>
+                    <div class="form-group">
+                        <label for="title">Email address</label>
+                        <input type="text" class="form-control" id="title" placeholder="Title">
+                    </div>
+                    <div class="form-group">
+                        <div class="btn-group" ng-model="button.checkbox" bs-checkbox-group>
+                            <label class="btn btn-default"><input type="checkbox" value="left"> Real Time</label>
+                            <label class="btn btn-default"><input type="checkbox" value="middle"> Private</label>
+                            <label class="btn btn-default"><input type="checkbox" value="right"> Refresh</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="button"
+                                class="btn btn-default"
+                                ng-model="source"
+                                ng-options="source.value for source in sources"
+                                data-animation="am-flip-x"
+                                placeholder="Report source"
+                                bs-select>
+                        </button>
+
+                        <button type="button"
+                                class="btn btn-default"
+                                ng-model="type"
+                                ng-options="type.value for type in types"
+                                data-animation="am-flip-x"
+                                placeholder="Report type"
+                                bs-select>
+                        </button>
+                    </div>
+                    <div class="border-dark-gray">
+                        <div ui-ace></div>
+                    </div>
+                    <div class="space-10"></div>
+                    <div class="form-group pull-right">
+                        <button class="btn btn-default">Render graph</button>
+                        <button class="btn btn-default">Save template</button>
+                        <button class="btn btn-success">Save</button>
+                    </div>
+                </form>
+                {#<nvd3 options='options' data='data'></nvd3>#}
+
             </div>
+        </div>
+        <div class="col-sm-5 col-md-5">
+            {# OTHER INPUTS #}
         </div>
     </div>
 
