--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -9,9 +9,10 @@
     <title>SBI</title>
     {% block stylesheets %}
         {% stylesheets
+        'assets/vendor/nvd3/nv.d3.css'
         'assets/vendor/bootstrap/dist/css/bootstrap.css'
         'assets/vendor/bootstrap/dist/css/bootstrap-theme.css'
-        '@MainAdminBundle/Resources/public/css/dashboard.css'
+        '@MainAdminBundle/Resources/public/css/main.css'
         '@MainAdminBundle/Resources/public/css/dataurl.css'
         'assets/vendor/angular-motion/dist/angular-motion.css'
         'assets/vendor/angular-xeditable/dist/css/xeditable.css'
@@ -50,7 +51,16 @@
 </div>
 {% endif %}
 <div class="container-fluid">
-    {% block body %}{% endblock %}
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-12">{# breadcrumb #}</div>
+            </div>
+            {% block body %}{% endblock %}
+        </div>
+    </div>
+
 </div>
 {% block javascripts %}
     {% javascripts
@@ -68,7 +78,8 @@
     'assets/vendor/d3/d3.js'
     'assets/vendor/nvd3/nv.d3.js'
     'assets/vendor/angular-nvd3/dist/angular-nvd3.js'
-
+    'assets/vendor/ace-builds/src-min-noconflict/ace.js'
+    'assets/vendor/angular-ui-ace/ui-ace.js'
 
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
