--- a/src/Main/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Main/UserBundle/Resources/views/Users/list.html.twig
@@ -10,12 +10,12 @@
 {% endblock %}
 {% block body %}
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+        <div class="col-sm-12 col-md-12">
             <h1 class="page-header">Users</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10 col-md-offset-2">
+        <div class="col-sm-12 col-md-12">
             <div ng-controller="ListCtrl">
                 <table ng-table="tableParams" class="table table-condensed">
                     <tr ng-repeat="user in $data">
